# movie-review-categorization

./: README.md  driver.py  lstm-movie-review-categorization.py  pyproject.toml
.spyproject/: workspace.ini
review_categorization/: data_loader.py  model_loader.py  predictor.py  rev_categorizer.py  tester.py  trainer.py  utils.py
