[tool.poetry]
name = "movie-review-categorization"
version = "0.1.0"
description = ""
authors = ["chashi-mahiul-islam-bd <ci20l@my.fsu.edu>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
numpy = "^1.21.2"
torch = "^1.9.1"
gpustat = "^0.6.0"
black = "^21.9b0"
click = "^8.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
